[package]
name = "research_prover_market_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
zksync-ethers-rs = { git = "https://github.com/lambdaclass/zksync-web3-rs", branch = "zksync-ethers-rs-v1" }
tokio = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
log = "0.4"
clap = "4.3"
eyre = "0.6"
serde_json = "1"
serde = "1"
hex = "0.4"
dirs = "5.0.1"
toml = "0.8.19"
dialoguer = "0.11"
colored = "2.1.0"
clap_complete = "4.5.17"
spinoff = "0.8.0"
sqlx = { version = "0.7.3", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "rust_decimal",
    "chrono",
    "json",
    "migrate",
    "ipnetwork",
]}
chrono = "0.4"
itertools = "0.13.0"
bincode = "1.3.3"
reqwest = "0.12.7"
